fixed self closing divs (cause unexpected behavior) as well as shifted style props into common rule. also added rounding to animation call

--- a/static/style/timeline-ext.css
+++ b/static/style/timeline-ext.css
@@ -1,3 +1,9 @@
+div#timelinecontainer,
+div#mapcontainer,
+div#details {
+	background-color: #eee;
+}
+
 div#mapcontainer {
    float: left;
 }
@@ -23,8 +29,8 @@ div#details img.close {
 }
 	   
 #details #detail-content {
-   margin: 5px;
+   margin: 10px;
    clear: right;
    overflow: auto;
-   height: 80%;
+   height: 80%; /* required for overflow to function properly */
 }
